<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

    </group>

    <item android:title="Main Function"
        android:layout_gravity="bottom"
        >
        <menu>
            <item
                android:id="@+id/fundamental_mode"
                android:checked="false"
                android:icon="@drawable/ic_directions_walk_black_24dp"
                android:title="@string/fundamental_mode"/>
            <item
                android:id="@+id/advance_mode"
                android:checked="false"
                android:icon="@drawable/ic_school_black_24dp"
                android:title="@string/advance_mode"/>
            <item
                android:id="@+id/strengthen_mode"
                android:checked="false"
                android:icon="@drawable/ic_trending_up_black_24dp"
                android:title="@string/strengthen_mode"/>
            <item
                android:id="@+id/listen_mode"
                android:checked="false"
                android:icon="@drawable/ic_hearing_black_24dp"
                android:title="@string/listen_mode"/>
            <item
                android:id="@+id/quit"
                android:checked="false"
                android:icon="@drawable/ic_watch_later_black_24dp"
                android:title="@string/quit"/>
        </menu>
    </item>

    <item android:title="Direction"
        android:layout_gravity="bottom"
        >
        <menu>
            <item
                android:id="@+id/How"
                android:checked="false"
                android:icon="@drawable/ic_live_help_black_24dp"
                android:title="@string/how"/>
        </menu>
    </item>
</menu>
